# cluster_utils

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: docs.yml  docs_pr.yml  nox.yml
cluster/: __init__.py  analyze_results.py  asynchronous_optimization.py  cluster.py  cluster_system.py  communication_server.py  condor_cluster_system.py  constants.py  data_analysis.py  distributions.py  dummy_cluster_system.py  errors.py  git_utils.py  grid_search.py  hp_optimization.py  job.py  job_executor.py  job_manager.py  latex_utils.py  my_utils.py  optimize_hyperparams.py  optimizers.py  parallel_executor.py  progress_bars.py  report.py  settings.py  slurm_cluster_system.py  slurm_parallel_cluster_system.py  submission.py  submission_state.py  user_interaction.py  utils.py
cluster/assets/latex/: git.tex
cluster/scripts/: generate_report.py  plot_job_timeline.py
cluster_utils/: __init__.py  cluster_system.py  communication_server.py  condor_cluster_system.py  constants.py  data_analysis.py  distributions.py  dummy_cluster_system.py  git_utils.py  grid_search.py  hp_optimization.py  job.py  job_manager.py  optimizers.py  progress_bars.py  report.py  settings.py  slurm_cluster_system.py  utils.py
cluster_utils/base/: __init__.py  settings.py
cluster_utils/client/: __init__.py  server_communication.py  submission_state.py
cluster_utils/scripts/: generate_report.py
cluster_utils/server/: dummy_cluster_system.py  job.py  settings.py  user_interaction.py
docs/: Makefile  README.md  api.rst  architecture.rst  changelog.rst  conf.py  configuration.rst  exit_for_resume.rst  index.rst  installation.rst  report.rst  setup_devel_env.rst  troubleshooting.rst  usage.rst  usage_mindset_and_rule_of_thumb.rst
docs/examples/: checkpointing.rst  cluster_main_decorator.rst  index.rst  slurm_timeout_signal.rst
docs/tutorials/: grid_search.rst  hp_optimization.rst
example/: create_jobs.py  dummy.py  get_results.sh  grid_search.py  optimize_hyperparams.py
examples/: Untitled.ipynb
examples/basic/: asynchronous_optimization_metaopt.json  asynchronous_optimization_metaopt_module.json  asynchronous_optimization_ng.json  constrained_grid.json  grid_search.json  grid_search_main_w_decorator.json  grid_search_with_tuples.json  main.py  main_no_fail.py  main_with_decorator.py  optimization.json  optimization_metaopt.json  optimization_metaopt.toml  optimization_metaopt_module.json  optimization_ng.json  optimize_locally.json  pre_job_script.sh
examples/checkpointing/: checkpoint_example.py  grid_search_checkpointing.json
examples/example1/: asynchronous_optimization_metaopt.json  asynchronous_optimization_ng.json  constrained_grid.json  grid_search.json  grid_search.py  main.py  optimization.json  optimize_hyperparams.py  optimize_hyperparams_asynch.py  optimize_hyperparams_asynch_cem.py  optimize_hyperparams_ng.py
examples/example2/: main.py  mnist.py  optimize_hyperparams.py
examples/example2/fashion_data/: t10k-labels-idx1-ubyte  train-labels-idx1-ubyte
examples/example3/: grid_search.py  train.py
examples/rosenbrock/: main.py  optimization.json  params.json
examples/sbl/: git_test.ipynb  grid_search.py  main.py  multiprocessing_test.ipynb
examples/slurm_timeout_signal/: grid_search.toml  main.py
src/: analyze_results.py  cluster_utils.py
src/cluster/: grid_search.py  hp_optimization.py
src/cluster_utils/: grid_search.py  hp_optimization.py  parallel_executor.py
src/cluster_utils/base/: communication.py  settings.py  utils.py
src/cluster_utils/client/: __init__.py
src/cluster_utils/scripts/: plot_job_timeline.py
src/cluster_utils/server/: __init__.py  condor_cluster_system.py  data_analysis.py  distributions.py  job_manager.py  optimizers.py  progress_bars.py  report.py  slurm_cluster_system.py  user_interaction.py  utils.py
tests/: dummy_pdflatex.sh  grid_search.json  grid_search_main_w_decorator.json  grid_search_resume.json  grid_search_with_venv.toml  hp_opt.json  hp_opt_nevergrad.json  hp_opt_resume.toml  main_no_save_metrics.json  main_no_save_metrics.py  run_integration_tests.sh  run_integration_tests_with_nevergrad.sh  run_integration_tests_with_report.sh  run_integration_tests_with_venv.sh  test_client_api.py  test_cluster_system.py  test_data_analysis.py  test_main_no_save_metrics.sh  test_scripts_plot_job_timeline.py  test_settings.py  test_slurm_cluster_system.py  test_utils.py
tmp/sbl/: git_test.py
